Add photo of Radia Perlman. Add remaining photos to html. Clean up code

--- a/index.html
+++ b/index.html
@@ -92,24 +92,28 @@
               <div class="radio">
                 <label>
                   <input type="radio" name="hero" value="2">
+                  <img src="img/ada.jpeg" alt="Ada Lovelace">
                   Ada Lovelace
                 </label>
               </div>
               <div class="radio">
                 <label>
                   <input type="radio" name="hero" value="3">
+                  <img src="img/steve.jpg" alt="Steve Jobs">
                   Steve Jobs
                 </label>
               </div>
               <div class="radio">
                 <label>
                   <input type="radio" name="hero" value="4">
+                  <img src="img/radiaP.jpeg" alt="She doesn't like being called the 'mother of the Internet'">
                   Radia Perlman
                 </label>
               </div>
               <div class="radio">
                 <label>
                   <input type="radio" name="hero" value="5">
+                  <img src="img/MarkZ.jpeg" alt="The Zucks">
                   Mark Zuckerberg
                 </label>
               </div>
@@ -161,7 +165,6 @@
           </li>
         </ul>
       </div>
-
     </div>
   </body>
 </html>
